commit on master

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://mainakdas16.github.io/my-app",
+    "homepage": "https://mainakdas16.github.io/TextAnalyzer",
 	"name": "my-app",
 	"version": "0.1.0",
 	"private": true,
